--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5",
-    "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.1"
+    "@tailwindcss/vite": "^4.1.3",
+    "astro": "^5.6.1",
+    "tailwindcss": "^4.1.3"
   }
 }
